# cmake-sfml-bloat-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.org  default.nix  shell.nix
.github/workflows/: ci.yml
data/: example.txt
nix/: derivation.nix  derivation.nix.in  sfml.nix
src/: State.cpp  main.cpp
src/include/: AssetManager.hpp  State.hpp  config.hpp.in  debug.hpp  main.hpp
test/: CMakeLists.txt  State.cpp
tools/appimage/: Dockerfile.in  app.desktop.in
tools/nix/: derivation.nix  derivation.nix.in  sfml.nix
